Single movie page styling - fixed spacing between elements at all sizes

--- a/src/styles/_single-movie.scss
+++ b/src/styles/_single-movie.scss
@@ -13,14 +13,19 @@
                 border-radius: 15px;
 
                 @include mq($tabletBP){
-                    width: 70%;
+                    width: 60%;
                 }
 
                 @include mq($desktopBP){
                     margin: 0;
                     margin-left: 5%;
-                    width: 35%;
+                    width: 37%;
                     max-width: 28rem;
+                }
+
+                @include mq($desktopWideBP){
+                    max-width: 33rem;
+                    margin-right: 2rem;
                 }
             }
         }
@@ -32,10 +37,17 @@
 
                 @include mq($desktopBP){
                     position: absolute;
-                    top: 18%;
+                    top: 12%;
                     max-width: 50vw;
                     right: 30px;
                     overflow: hidden;
+                }
+
+                @include mq($desktopWideBP){
+                    max-width: 55vw;
+                    top: 17%;
+                    right: 7%;
+                    padding-left: 7rem;
                 }
 
                 .movieTitle {
@@ -49,6 +61,11 @@
 
                     @include mq($desktopBP){
                         text-align: left;       
+                    }
+
+                    @include mq($desktopWideBP){
+                        font-size: 3rem;
+                        margin-bottom: 2rem;
                     }
                 }
 
@@ -72,6 +89,11 @@
                         @include mq($desktopBP){
                             width: 50px;
                         }
+
+                        @include mq($desktopWideBP){
+                            width: 70px;
+                            
+                        }
                     }
 
                     .ratingPercent{
@@ -84,6 +106,12 @@
 
                         @include mq($desktopBP){
                             font-size: 1.7em;   
+                        }
+                        
+                        @include mq($desktopWideBP){
+                            font-size: 2.5em;
+                            margin-left: 2rem;
+                            margin-bottom: 2rem;
                         }
                     }
                 }
@@ -105,6 +133,12 @@
                         text-underline-offset: 8px; 
                         text-align: left;     
                     }
+
+                    @include mq($desktopWideBP){
+                        font-size: 2.2em;
+                        text-underline-offset: 12px;
+
+                    }
                 }
 
                 .movieDes {
@@ -114,13 +148,18 @@
                     margin-bottom: 1rem;
 
                     @include mq($tabletBP){
-                        font-size: 1.5em;
+                        font-size: 1.4em;
                         font-weight: 400;
                     }
 
                     @include mq($desktopBP){
                         width: 50vw;
                         font-size: 1.1em;
+                    }
+
+                    @include mq($desktopWideBP){
+                        font-size: 1.4em;
+                        margin-bottom: 2rem;
                     }
                 }
 
@@ -164,6 +203,10 @@
                                 font-size: 1.6em;
                                 text-underline-offset: 8px;
                             }
+
+                            @include mq($desktopWideBP){
+                                font-size: 2.2em;
+                            }
                         }
         
                         .date {
@@ -176,6 +219,10 @@
 
                             @include mq($desktopBP){
                                 font-size: 1.3em;
+                            }
+
+                            @include mq($desktopWideBP){
+                                font-size: 2em;
                             }
                         }
                     }
@@ -197,6 +244,10 @@
                                 font-size: 1.6em;
                                 text-underline-offset: 8px;
                             }
+
+                            @include mq($desktopWideBP){
+                                font-size: 2.2em;
+                            }
                         }
         
                         .time {
@@ -209,6 +260,10 @@
 
                             @include mq($desktopBP){
                                 font-size: 1.3em;
+                            }
+
+                            @include mq($desktopWideBP){
+                                font-size: 2em;
                             }
                         }
                     }
@@ -240,6 +295,11 @@
                             text-align: left;
                             margin-left: 5.1%;
                         }
+
+                        @include mq($desktopWideBP){
+                            font-size: 2.2em;
+                            text-underline-offset: 12px;
+                        }
                        
                     }
                     
@@ -255,8 +315,10 @@
                         }
 
                         @include mq($desktopWideBP){
-                            width: 95vw;
+                            width: 94vw;
+                            max-width: 94vw;
                             margin: 0 2rem;
+                            margin-left: 3%;
                             grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
                         }
 
@@ -292,11 +354,12 @@
 
                                 @include mq($tabletBP){
                                     max-width: 80%;
-                                    font-size: 1.4em;   
+                                    font-size: 1.4em; 
+                                    margin-top: 1rem;  
                                 }
 
                                 @include mq($desktopWideBP){
-                                    font-size: 1em;
+                                    font-size: 1.2em;
                                     max-width: 80%;
                                 }
                             }
